src/human_study/program_36/python_err_msg.txt
File "./seq2parse/human_study/program_36/original.py", line 3
    if age < (18)
                 ^
SyntaxError: expected ':'
